Fix flowchart locked scenes grey color
Also add a corner radius, allow smaller size to remove the horizontal scrollbar on Steam deck

--- a/src/styles/config.scss
+++ b/src/styles/config.scss
@@ -148,9 +148,8 @@
 				font-size: 1.2em;
 				&.btn {
 					transition: .1s ease-in-out;
-					border-radius: 4px;
+					border-radius: 3px;
 					padding: 0.2em;
-					// color: var(--color-link);
 
 					.off {
 						filter: grayscale(1);
